force-app/main/default/objects/Listing__c/Listing__c.object-meta.xml
<CustomObject>
  <label>Listing</label>
  <pluralLabel>Listings</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Listing #</label>
    <displayFormat>LS-{00000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>