force-app/main/default/objects/Listing__c/fields/Amenities__c.field-meta.xml
<CustomField>
  <fullName>Amenities__c</fullName>
  <label>Amenities</label>
  <type>MultiselectPicklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>WiFi</fullName></value>
      <value><fullName>Desk</fullName></value>
      <value><fullName>Heating</fullName></value>
      <value><fullName>Aircon</fullName></value>
      <value><fullName>Laundry</fullName></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>