force-app/main/default/objects/Listing__c/fields/Min_Term_Weeks__c.field-meta.xml
<CustomField>
  <fullName>Min_Term_Weeks__c</fullName>
  <label>Min Term Weeks</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>