force-app/main/default/objects/Listing__c/fields/Room__c.field-meta.xml
<CustomField>
  <fullName>Room__c</fullName>
  <label>Room</label>
  <referenceTo>Room__c</referenceTo>
  <relationshipLabel>Listings</relationshipLabel>
  <relationshipName>Listings</relationshipName>
  <type>MasterDetail</type>
</CustomField>