force-app/main/default/objects/Listing__c/fields/Start_Available__c.field-meta.xml
<CustomField>
  <fullName>Start_Available__c</fullName>
  <label>Start Available</label>
  <type>Date</type>
</CustomField>