force-app/main/default/objects/Listing__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Draft</fullName><default>true</default></value>
      <value><fullName>Published</fullName></value>
      <value><fullName>Paused</fullName></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>